# bewt-assertion-pipeline

./: .env.example  .gitignore  README.md  pyproject.toml
config/: apps.yaml  metrics.yaml  models.yaml
src/: cli.py  config.py  models.py  runner.py
src/data/: store.py
src/evaluation/: comparator.py  excel_export.py  llm_classifier.py  metrics.py  prompt_export.py  reporter.py  usage_report.py
src/execution/: app_setup.py  docker_manager.py  java_injector.py  test_runner.py
src/llm/: client.py  observability.py  pricing.py  prompt_builder.py  response_parser.py  types.py
src/parsing/: assertion_model.py  gherkin_parser.py  java_parser.py
src/variants/: generator.py  html_capture.py
tests/: test_cli_export_prompts.py  test_cli_llm_usage.py  test_cli_show_prompt.py  test_cli_treatment_comparison.py  test_comparator.py  test_excel_export_manual_labels.py  test_java_parser.py  test_llm_classifier.py  test_llm_client.py  test_llm_pricing.py  test_llm_usage_summary.py  test_manual_classification_store.py  test_mode_persistence.py  test_observability.py  test_prompt_export.py  test_prompt_modes.py  test_response_parser.py  test_result_store_llm_calls.py  test_runner_llm_calls.py  test_treatment_comparison_store.py  test_usage_report.py  verify_pipeline.py
