[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bewt-assertion-pipeline"
version = "0.1.0"
description = "Automated pipeline for evaluating LLM-generated Selenium assertions"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "openai>=1.0",
    "anthropic>=0.30",
    "selenium>=4.20",
    "docker>=7.0",
    "scipy>=1.12",
    "pandas>=2.2",
    "Levenshtein>=0.25",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
bewt-pipeline = "src.cli:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 120
